make event bar wrap and set font text size larger

--- a/samples/react-rhythm-of-business-calendar/src/components/events/EventBar.module.scss
+++ b/samples/react-rhythm-of-business-calendar/src/components/events/EventBar.module.scss
@@ -4,10 +4,11 @@ $eventBorderRadius: 6px;
 
 @mixin event-font() {
     color: white;
-    @include ms-fontSize-12;
+    @include ms-fontSize-16;
     line-height: 16px;
     overflow: hidden;
-    white-space: nowrap;
+    white-space: normal;
+    word-wrap: break-word;
 }
 
 .event {
@@ -42,7 +43,7 @@ $eventBorderRadius: 6px;
 
     .text {
         @include event-font();
-        text-overflow: ellipsis;
+        text-overflow: unset;
     }
 
     .recur {
